assess - fixed the alignment

--- a/src/components/Anatomical/anatomical.module.css
+++ b/src/components/Anatomical/anatomical.module.css
@@ -1,6 +1,6 @@
 .anatomicalWrapper {
   position: relative;
-  background-color: var(--soft-purple);
+  background-color: var(--light-gray);
   border-radius: 12px;
   margin: 24px;
   height: 100%;
